--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .active-btn {
+  color: white;
+  background-color: red;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.inactive-btn {
+  color: white;
+  background-color: green;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+} */
+
+
+
+
+
+/* table.MuiTable-root {
+  width: 50%;
+  flex-direction: row;
+}
+
+
+tr.MuiTableRow-root {
+  display: flex;
+  flex-direction: row;
+  color: red;
+
+
+} */
+/* 
+td.MuiTableCell-root {
+
+  width: 60px;
+  height: 80px;
+  padding: 10px;
+  margin: 0px;
+
+
+}
+
+button {
+  width: 30px;
+  height: 40px;
+  font-size: 10px;
+} */
